--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -12,10 +12,26 @@
 </head>
 
 <body>
+  <div class="container mt-3">
 
-  <H1>tudo certo agora
-    
-  </H1>
+    <div class="card">
+      <div class="card-header">
+        <h3>Realizar pergunta</h3>
+      </div>
+      <div class="card-body">
+        <form action="">
+          <label for="">Título</label>
+          <input type="text" placeholder="Título" class="form-control ">
+          <label for="">Descrição</label>
+          <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+          <button class="btn btn-success mt-3"> Perguntar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 
 
