--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -8,17 +8,26 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
 <body>
+  <div class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="/">
+      <img id="guiaLogo" src="/img/guia.png" alt="Logo guia do pragramador">
+    </a>
+  </div>
   <div class="container mt-3">
 
     <div class="card">
+
       <div class="card-header">
         <h3>Realizar pergunta</h3>
       </div>
+
       <div class="card-body">
+
         <form action="">
           <label for="">Título</label>
           <input type="text" placeholder="Título" class="form-control ">
@@ -29,7 +38,7 @@
       </div>
     </div>
   </div>
-</div>
+  </div>
 
 
 
