--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,58 +1,27 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guia perguntas</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css">
-
-</head>
+<%- include ('./partials/header.ejs') %>
 
 <body>
-  <div class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="/">
-      <img id="guiaLogo" src="/img/guia.png" alt="Logo guia do pragramador">
-    </a>
-  </div>
-  <div class="container mt-3">
 
-    <div class="card">
+  <%- include('./partials/navbar.ejs') %>
+
+  <div class="container mt-3">
+    <div class="card" id="formulario-pergunta">
 
       <div class="card-header">
         <h3>Realizar pergunta</h3>
       </div>
 
       <div class="card-body">
-
-        <form action="">
+        <form method="POST" action="salvarpergunta">
           <label for="">Título</label>
           <input type="text" placeholder="Título" class="form-control ">
           <label for="">Descrição</label>
           <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-          <button class="btn btn-success mt-3"> Perguntar</button>
+          <button class="btn btn-primary mt-3"> Perguntar</button>
         </form>
       </div>
+
     </div>
   </div>
-  </div>
-
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
 </body>
-
-</html>
+<%- include('./partials/footer.ejs') %>
