--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -14,9 +14,18 @@
       <div class="card-body">
         <form method="POST" action="salvarpergunta">
           <label for="">Título</label>
-          <input type="text" placeholder="Título" class="form-control ">
+          <input 
+            type="text" 
+            placeholder="Título"
+            name="titulo"
+            class="form-control "
+          >
           <label for="">Descrição</label>
-          <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+          <textarea 
+            placeholder="Descreva sua pergunta aqui" 
+            name="descricao"
+            class="form-control"
+          ></textarea>
           <button class="btn btn-primary mt-3"> Perguntar</button>
         </form>
       </div>
