--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -8,6 +8,24 @@
       <h1><%= pergunta.titulo %></h1>
       <h3><%= pergunta.descricao %></h3>
       <hr>
+      <form method="POST" action="/responder">
+        <h3>Resposta</h3>
+        <label >Resposta:</label>
+        <textarea placeholder="Digite sua resposta" name="corpo" class="form-control"></textarea>
+        <br>
+        <input type="hidden" name="pergunta" value="<%= pergunta.id %>">
+        <button type="submit" class="btn btn-primary" >Responder</button>
+      </form>
+      <hr>
+      <h3>Respostas</h3>
+      <hr>
+      <% respostas.forEach(resposta => { %>
+        <div class="card">
+          <div class="card-body">
+              <p><%= resposta.corpo %></p>
+            </div>
+          </div>
+      <% }) %>
     </div>
 
   </body>
